--- a/senguo.cc/admin/static/css/official_shop.css
+++ b/senguo.cc/admin/static/css/official_shop.css
@@ -1,15 +1,19 @@
 body{background-color:#f5f5f7;}
-.map_box{background:url('/static/official_img/slide_bg.jpg') no-repeat;height:882px;background-size:130%;padding-top:60px;}
+.map_box{background:url('/static/official_img/slide_bg.jpg') no-repeat;height:882px;background-size:130%;padding-top:60px;margin-top: -76px;}
 .map_box .box{width:800px;margin:0 auto;}
 .map{width:100%;height:700px;}
-.sty1{width:100%;line-height:18px;overflow:hidden;word-break: break-all;}
 .list_box{width:100%;}
 .list_box ul{width:120%;}
-.list_box ul .item{width:205px;height:350px;float:left;margin-right:60px;position:relative;margin-bottom:50px;}
+.list_box ul .item{width:240px;height:300px;float:left;margin-left:8px;position:relative;margin-bottom:8px;overflow: hidden;}
 .list_box ul .item .img{width:100%;height:235px;overflow:hidden;padding:10px;}
 .list_box ul .item .img img{width:100%;}
-.list_box ul .item .con{width:100%;height:160px;padding:20px;background:rgba(255,102,102,0.6);position:absolute;top:200px;}
-.list_box ul .item .intro{max-height:50px;overflow:hidden;line-height:16px;}
+.list_box ul .item>a{text-decoration:none;}
+.picture-bg{width: 240px;height: 300px;position: absolute;top: 240px;background-color: #58d0a6;transition: all 0.35s;-moz-transition: all 0.35s;-webkit-transition: all 0.35s;-o-transition: all 0.35s;}
+.list_box ul .item .con{width: 100%;height: 60px;position: absolute;top:240px;opacity: 1;transition: all 0.35s;-moz-transition: top 0.35s;-webkit-transition: top 0.35s;-o-transition: top 0.35s;}
+.list_box ul .item:hover .picture-bg{top:0;width: 100%;height: 300px;opacity: 0.95;}
+.list_box ul .item:hover .con{top: 0;}
+.list_box ul .item .shop_name{width:100%;height:60px;line-height: 60px;text-align: center;font-size: 20px;;}
+.list_box ul .item .intro{width: 200px;font-size: 16px;line-height: 20px;margin-left: 25px;opacity: 1}
 .number_box{width:620px;height:108px;line-height:108px;margin:0 auto;}
 .number_box .num{width:61px;height:108px;margin-left:10px;margin-right:10px;background:url('/static/official_img/n_bg.png');font-size:80px;position:relative;}
 .number_box .n{position:absolute;z-index:5;left:7px;display:inline-block;width:30px;height:108px;line-height:108px;}
