--- a/senguo.cc/admin/templates/official/about.html
+++ b/senguo.cc/admin/templates/official/about.html
@@ -3,63 +3,86 @@
 <link href="{{static_url('css/official_about.css')}}" rel="stylesheet">
 {% end %}
 {% block content %}
-<div class="intro bg-green2 text-white clearfix">
-	<div class="left_img pull-left"/><img src="{{static_url('official_img/about_1.png')}}"/></div>
-	<div class="word  pull-left text-center">
-		<h1 class="text-center">关于森果</h1>
-		<div class="con">
-			<p>森果专注于水果O2O领域，为创业团队提供免费的水果O2O第三方平台。<br>隶属于武汉小果科技有限公司，公司前身为全国首个微信卖水果的团队--We信水果帮。</p>
+<div class="about-bg">
+	<div class="w1000">
+		<div class="about-box">
+			<h1 class="text-center">关于森果</h1>
+			<div class="about-text">
+				<p>森果专注于水果O2O领域，为创业团队提供免费的水果O2O第三方平台<br />隶属于武汉小果科技有限公司，公司前身为全国首个微信卖水果的团队--We信水果帮。</p>
+			</div>
 		</div>
 	</div>
-	<div class="right_img pull-left"/><img src="{{static_url('official_img/about_2.png')}}"/></div>
 </div>
-<div class="w800 clearfix">
-	<div class="text-grey font16 list">
-		<ul>
-			<li>
-				<img src="{{static_url('official_img/h_img.png')}}" class="pull-left img mr40"/>
-				<div class="pull-left word">
-					<p>黄铁森创始人&CEO</p>
-					<p class="mt10">华中科技大学光电信息学院10级，We信水果帮(<a href=" http://baike.baidu.com/link?url=GZZPGBeHJxVLImkVXwG7ri_TP9lh8JMub6Sg0isv9NJfop4I1-MkQvX9zjFUvS8eWu5iZHyFtL7GMa3l6TFsp1FiEOJfisZ1sxfdIHX5IVxspqT2s8-J4JwEoCSXhVfZ" target="_blank" class="text-green2">百度百科</a>)创始人</p>
-				</div>
-			</li>
-			<li>
-				<img src="{{static_url('official_img/q_img.png')}}" class="pull-right img ml40"/>
-				<div class="pull-right word">
-					<p>乔迁(<a href=" http://baike.baidu.com/subview/312199/8569904.htm#viewPageContent" class="text-green2">百度百科</a>)联合创始人&CTO</p>
-					<p class="mt10">华中科技大学软件学院06级，思存工作室创始人</p>
-				</div>
-			</li>
-		</ul>	
+<div class="people-bg">
+	<img src="{{static_url('official_img/mall-bg.png')}}" />
+	<div class="w1000 about-width">
+		<div class="list">
+			<ul>
+				<li>
+					<img src="{{static_url('official_img/h_img.png')}}" class="pull-left img mr40"/>
+					<div class="pull-left word">
+						<p class="people-name">黄铁森 -- 创始人&CEO</p>
+						<p class="mt10">华中科技大学光电信息学院10级，We信水果帮(<a href=" http://baike.baidu.com/link?url=GZZPGBeHJxVLImkVXwG7ri_TP9lh8JMub6Sg0isv9NJfop4I1-MkQvX9zjFUvS8eWu5iZHyFtL7GMa3l6TFsp1FiEOJfisZ1sxfdIHX5IVxspqT2s8-J4JwEoCSXhVfZ" target="_blank" class="text-green2">百度百科</a>)创始人</p>
+					</div>
+				</li>
+				<li>
+					<img src="{{static_url('official_img/q_img.png')}}" class="pull-right img ml40"/>
+					<div class="pull-right word">
+						<p class="people-name">乔迁(<a href=" http://baike.baidu.com/subview/312199/8569904.htm#viewPageContent" class="text-green2">百度百科</a>) -- 联合创始人&CTO</p>
+						<p class="mt10">华中科技大学软件学院06级，思存工作室创始人</p>
+					</div>
+				</li>
+			</ul>	
+		</div>
 	</div>
-	<div class="text-grey text-center mt40">
-		<h1>媒体报道</h1>
-		<p class="text-center font14">一年多以来森果受到了全社会的关注，十多家纸媒，36Kr，
-		武汉电视台等都针对我们进行了深度的专题报道</p>
+</div>
+<div class="video">
+	<embed src="http://player.youku.com/player.php/sid/XNzUyMjYzNDYw/v.swf" allowFullScreen="true" quality="high" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+</div>
+<div class="video-bg">
+	<div class="w1000 video-width">
+		<div class="video-text">
+			<h1>媒体报道</h1>
+			<p class="text-center font14">一年多以来森果受到了全社会的关注，<br />十多家纸媒，36Kr，
+		武汉电视台<br />等都针对我们进行了深度的专<br />题报道</p>
+		</div>
 	</div>
-	<div class="video center-block">
-		<embed src="http://player.youku.com/player.php/sid/XNzUyMjYzNDYw/v.swf" allowFullScreen="true" quality="high" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+	<div class="video-img">
+		<img src="{{static_url('official_img/video-img.png')}}">
+		<img class="play-icon" src="{{static_url('official_img/play_normal.png')}}" title="播放视频">
+		<img class="play-hover-icon" src="{{static_url('official_img/play_hover.png')}}" title="播放视频">
+		<span class="triangle"></span>
 	</div>
-	<div class="new_list clearfix">
-		<ul>
-			<li class="item pull-left">
-				<img src="{{static_url('official_img/cecn.png')}}"/>
-				<a href="http://edu.ce.cn/xw/201305/06/t20130506_727577.shtml" target="_blank">90后华科大学生开微信水果店 两天获400多关注</a>
-			</li>
-			<li class="item pull-left">
-				<img src="{{static_url('official_img/36kr.png')}}"/>
-				<a href="http://www.36kr.com/p/209289.html" target="_blank">We信水果帮:自己走通水果电商的进货、仓储、分拣、配送环节</a>
-			</li>
-			<li class="item pull-left">
-				<img src="{{static_url('official_img/dachu.png')}}"/>
-				<a href="http://hb.qq.com/a/20130506/001069.htm" target="_blank">电话推销已经“OUT了大学生微信上开水果店</a>
-			</li>
-			<li class="item pull-left">
-				<img src="{{static_url('official_img/changjiang.png')}}"/>
-				<a href="http://www.changjiangtimes.com/2013/08/452289.html" target="_blank">“华科帮”里崛起的IT新星</a>
-			</li>	
-		</ul>
+</div>
+<div class="news-bg">
+	<div class="w1000">
+		<div class="new_list clearfix">
+			<p>其它报道</p>
+			<ul>
+				<li class="item pull-left">
+					<img src="{{static_url('official_img/economic.png')}}"/>
+					<a href="http://edu.ce.cn/xw/201305/06/t20130506_727577.shtml" target="_blank">
+						90后华科大学生开微信水果店 两天获400多关注
+					</a>
+				</li>
+				<li class="item pull-left">
+					<img src="{{static_url('official_img/36kr.png')}}"/>
+					<a href="http://www.36kr.com/p/209289.html" target="_blank">We信水果帮:自己走通水果电商的进货、仓储、分拣、配送环节</a>
+				</li>
+				<li class="item pull-left">
+					<img src="{{static_url('official_img/tencent.png')}}"/>
+					<a href="http://hb.qq.com/a/20130506/001069.htm" target="_blank">电话推销已经“OUT了大学生微信上开水果店</a>
+				</li>
+				<li class="item pull-left">
+					<img src="{{static_url('official_img/changjiang.png')}}"/>
+					<a href="http://www.changjiangtimes.com/2013/08/452289.html" target="_blank">"华科帮"里崛起的IT新星</a>
+				</li>	
+			</ul>
+		</div>
 	</div>
+</div>
+<div class="w1000 clearfix">
+	
 	<p class="more clearfix">还有更多:</p>
 	<div class="new_list2 clearfix">
 		<div class="pull-left box">
