--- a/senguo.cc/admin/static/css/admin-order.css
+++ b/senguo.cc/admin/static/css/admin-order.css
@@ -1,6 +1,6 @@
 /*div,p,ul,li,span{-webkit-user-select: none; }*/
 .subnav li{width:100px;}
-.subnav .number{display:inline-block;width:20px;height:20px;border-radius:50%;line-height:20px;position:absolute;top:5px;right:3px;background:#ff6666;color:#fff;}
+.subnav .number{display:inline-block;width:20px;height:20px;border-radius:50%;line-height:20px;position:absolute;top:5px;right:3px;background:#ff6666;color:#fff;font-size: 12px;}
 
 
 .orders-mode-lock{width:100%;height:auto;}
@@ -48,9 +48,9 @@
 .order-list-item .order-message .message-img{width:17px;height:15px;background:url("../images/container-icon.gif") no-repeat 0 -199px;}
 
 .order-list-item .order-status{display:inline-block;min-height:70px;position:relative;width:650px;}
-.order-list-item .order-status .status-bar{width:100%;height:6px;position:relative;margin-top:10px;border-radius:5px;}
+.order-list-item .order-status .status-bar{width:100%;height:6px;position:relative;margin-top:15px;border-radius:5px;}
 .order-list-item .order-status .status-bar .status-inner{height:6px;position:absolute;top:0;border-radius:5px;}
-.order-list-item .order-status .status-circle{width:40px;height:40px;border-radius:50%;position:absolute;top:-3px;margin-left:-5px;}
+.order-list-item .order-status .status-circle{width:40px;height:40px;border-radius:50%;position:absolute;top:-2px;margin-left:-5px;border: 1px solid #44b549;}
 .order-list-item .order-status .status-circle img{width:100%;border-radius:50%;}
 .order-list-item .order-status .status-info{position:absolute;top:40px;width:150px;margin-left:-8px;}
 .order-list-item .order-status-dealing .status-bar .status-inner{background:#45b549;}
