--- a/senguo.cc/admin/templates/official/base.html
+++ b/senguo.cc/admin/templates/official/base.html
@@ -20,6 +20,7 @@
 {% set product_active=''%}
 {% set community_active=''%}
 {% set about_active=''%}
+{% set appdownload_active=''%}
 {% if context['subpage'] == 'home'%}
 {% set home_active='active'%}
 {% elif context['subpage'] == 'about'%}
@@ -30,6 +31,8 @@
 {% set shop_active='active'%}
 {% elif context['subpage'] == 'product'%}
 {% set product_active='active'%}
+{% elif context['subpage'] == 'appdownload'%}
+{% set appdownload_active='active'%}
 {% end %}
 <body>
 	<header class="clearfix head">
@@ -51,7 +54,7 @@
                     <li class="{{shop_active}}"><a href="{{reverse_url('OfficialShopList')}}">店铺列表</a></li>
 					<li class="{{about_active}}"><a href="{{reverse_url('OfficialAbout')}}">关于我们</a></li>
                     <li class="{{community_active}}"><a href="{{reverse_url('BbsMain')}}" target="_blank">森果社区</a></li>
-                    <li class=""><a href="#">下载APP</a></li>
+                    <li class="{{appdownload_active}}"><a href="{{reverse_url('OfficialAppdownload')}}">下载APP</a></li>
                     <div class="admin-box">
                         <div class="login-box hidden-xs">
                             <ul class="text-grey header-top" id="header-top">
