--- a/senguo.cc/admin/static/css/official_shop.css
+++ b/senguo.cc/admin/static/css/official_shop.css
@@ -1,5 +1,5 @@
 body{background-color:#f5f5f7;}
-.map_box{background:url('/static/official_img/slide_bg.jpg') no-repeat;height:882px;background-size:130%;padding-top:60px;margin-top: -76px;}
+.map_box{background:url('/static/official_img/slide_bg.jpg') no-repeat;height:882px;background-size:130%;padding-top:60px;}
 .map_box .box{width:800px;margin:0 auto;}
 .map{width:100%;height:700px;}
 .list_box{width:100%;}
