--- a/senguo.cc/admin/templates/bbs/artical-detail.html
+++ b/senguo.cc/admin/templates/bbs/artical-detail.html
@@ -12,7 +12,6 @@
         <div class="aside-box box-border">
             <p class="aside-title"><span>热门文章</span></p>
             <ul class="aside-list hot-artilce-list">
-              
             </ul>
         </div>
     </div>
@@ -47,7 +46,7 @@
                             <div class="code2-box fl" id="code2">
                             </div>
                             <div class="code-txt-box fl">
-                                <p class="c666 code-txt">打开微信"扫一扫"，将本文章分享到朋友圈</p>
+                                <p class="c666 code-txt">打开微信“扫一扫”，将本文章分享到朋友圈</p>
                             </div>
                         </div>
                     </a>
