--- a/senguo.cc/admin/templates/bbs/base.html
+++ b/senguo.cc/admin/templates/bbs/base.html
@@ -151,7 +151,7 @@
 <script type="text/javascript" src="/static/js/jquery.min.js"></script>
 <script type="text/javascript" src="/static/js/template.js"></script>
 <script type="text/javascript" src="/static/bbs/js/util.js"></script>
-<script type="text/javascript" src="/static/bbs/js/base.js"></script>
+<script type="text/javascript" src="{{static_url('bbs/js/base.js')}}"></script>
 {% block bottom %}{% end %}
 </body>
 </html> 
