--- a/senguo.cc/admin/static/css/official_about.css
+++ b/senguo.cc/admin/static/css/official_about.css
@@ -1,4 +1,4 @@
-.about-bg{width: 100%;height: 270px;margin-top: -76px;background:-webkit-gradient(linear, 0 0, 100% 100%, from(#58d0a6), to(#65cec5));FILTER: progid:DXImageTransform.Microsoft.Gradient(gradientType=1,startColorStr=#58d0a6,endColorStr=#65cec5);}
+.about-bg{width: 100%;height: 270px;background:-webkit-gradient(linear, 0 0, 100% 100%, from(#58d0a6), to(#65cec5));FILTER: progid:DXImageTransform.Microsoft.Gradient(gradientType=1,startColorStr=#58d0a6,endColorStr=#65cec5);}
 .about-box{width: 100%;margin:0 auto;}
 .about-box>h1{font-size: 44px;color: #fff;font-weight: bold;margin-top: 75px;margin-bottom: 50px;}
 .about-box .about-text>p{font-size: 18px;text-align: center;color: #fff;line-height: 30px;}
