--- a/senguo.cc/admin/static/css/admin-order.css
+++ b/senguo.cc/admin/static/css/admin-order.css
@@ -168,8 +168,8 @@
 .send-staff-list{width:100%;max-width:650px;clear:both;}
 .send-staff-list li{border:1px solid #fff;width:100%;clear:both;padding:5px 10px;height:50px;line-height:40px;}
 .send-staff-list li.active{border:1px solid #44b549;}
-.send-staff-list li .img{width:40px;height:40px;border-radius:50%;float:left}
-.send-staff-list .info{float:left;}
+.send-staff-list li .sub-img{width:40px;height:40px;border-radius:50%;float:left}
+.send-staff-list .sub-info{float:left;}
 .send-staff-list .choosed{display:none;color:#44b549;float:right;}
 .send-staff-list li.active .choosed{display:block;}
 .new{display:inline-block;width:20px;height:20px;border:1px solid #7AD218;color:#7AD218;line-height:19px;text-align:center;margin-left:-25px;margin-right:5px;background-color:#fff;}
