--- a/senguo.cc/admin/templates/official/about.html
+++ b/senguo.cc/admin/templates/official/about.html
@@ -28,7 +28,7 @@
 				<li>
 					<img src="{{static_url('official_img/q_img.png')}}" class="pull-right img ml40"/>
 					<div class="pull-right word">
-						<p class="people-name">乔迁(<a href=" http://baike.baidu.com/subview/312199/8569904.htm#viewPageContent" class="text-green2">百度百科</a>) -- 联合创始人&CTO</p>
+						<p class="people-name">乔迁(<a href=" http://baike.baidu.com/subview/312199/8569904.htm#viewPageContent" target="_blank" class="text-green2">百度百科</a>) -- 联合创始人&CTO</p>
 						<p class="mt10">华中科技大学软件学院06级，思存工作室创始人</p>
 					</div>
 				</li>
