--- a/senguo.cc/admin/static/css/official_appdownload.css
+++ b/senguo.cc/admin/static/css/official_appdownload.css
@@ -1,3 +1,21 @@
-.app-bg{width: 100%;height: 487px;overflow:hidden;}
 .app-bg-img{max-width: 1920px;height: 487px;margin: 0 auto;overflow: hidden;position: relative;}
 .app-bg-img>img{min-height: 400px;position: absolute;left: 0;}
+.appdownload-width{width: 1000px;position: absolute;top: 0;left: 50%;margin-left: -500px;}
+.download-text{width: 500px;position: absolute;left: 90px;margin-top: 76px;}
+.download-text>h1{font-size: 36px;font-weight: bold;color: #fff;margin-top: 100px;}
+.download-method>ul>li{width: 220px;float: left;list-style:disc;font-size: 16px;color: #fff;line-height: 26px;}
+.appdownload-imgs{position: absolute;top: 300px;height: 60px;width: 500px;}
+.android-box,.apple-box{width: 220px;height: 60px;float: left;}
+.android-box .android-img,.apple-box .apple-img{cursor: pointer;display: inline-block;width: 200px;height: 60px;}
+.android-box .android-img{transition: all 0.5s;background:url('../official_img/android_normal.png') no-repeat;}
+.android-box:hover  .android-img{background:url('../official_img/android_hover.png') no-repeat;}
+.apple-box .apple-img{transition: all 0.5s;background:url('../official_img/apple_normal.png') no-repeat;margin-left: 10px;}
+.apple-box:hover  .apple-img{background:url('../official_img/apple_hover.png') no-repeat;}
+.right-img{position: absolute;top: 0;right: 0;width: 500px;}
+.right-img>img{position: absolute;right: 50px;top:130px;}
+.hover-wechat{transition: all 0.5s;opacity: 0;z-index: -1;width: 200px;height: 233px;background-color: #fff;position: relative;top: -310px;}
+.hover-wechat>p{text-align: center;font-size: 16px;padding-top: 12px;}
+.apple-box .hover-wechat{left: 10px;}
+.down-triangle{position: absolute;left: 90px;bottom: -9px;width: 0;height: 0;border-left: 10px solid transparent;border-right: 10px solid transparent;border-top: 10px solid #fff;}
+.android-box:hover .hover-wechat{opacity: 1;z-index: 0;}
+.apple-box:hover .hover-wechat{opacity: 1;z-index: 0;}
