fix picture lib style

--- a/senguo.cc/admin/templates/admin/goods-all.html
+++ b/senguo.cc/admin/templates/admin/goods-all.html
@@ -369,12 +369,12 @@
 <div class="pop-win pop-picture-library">
     <div class="wrap-sty-box">
          <ul class="picture-title wrap-sty">
-            <li class="active show-upload-list">图片库</li>
+            <li class="active show-upload-list">您上传的图片</li>
             <li class="show-default-list">系统默认图片</li>
         </ul>
         <div class="p15" id="upload-area">
-            <span class="pull-left">点击图片即选中(<span class="pic-classify">所有</span>)</span>
-            <button id="upload-picture" class="btn bg-green text-white pull-right">本地上传</button>
+            <span class="pull-left ml5 font14 text-grey9">点击图片即选中（当前类目：<span class="pic-classify">所有</span>）</span>
+            <button id="upload-picture" class="btn bg-green text-white pull-right">上传新图片</button>
         </div>
          <div class="picture-library">
            <ul class="group picture-list upload-pic-list">
@@ -403,7 +403,7 @@
                 </ul>
             </div>
         </div>
-        <p class="picture-title3">预览</p>
+        <p class="picture-title3">已选图片</p>
         <ul class="choosed-list">
 
         </ul>
