--- a/senguo.cc/admin/templates/m-admin/shop-add-notice.html
+++ b/senguo.cc/admin/templates/m-admin/shop-add-notice.html
@@ -46,12 +46,12 @@
 <div class="pop-picture-library hide">
     <div class="wrap-sty-box">
           <ul class="picture-title wrap-sty">
-                <li class="active show-upload-list">图片库</li>
+                <li class="active show-upload-list">您上传的图片</li>
                 <li class="show-default-list">系统默认图片</li>
             </ul>
              <div class="picture-title2" id="upload-area">
-                <span class="fl">点击图片即选中</span>
-                <button id="upload-picture" class="btn fr">本地上传</button>
+                <span class="fl c999">点击图片即选中</span>
+                <button id="upload-picture" class="btn fr">上传新图片</button>
             </div>
              <div class="picture-library">
                 <ul class="group picture-list upload-pic-list">
