--- a/senguo.cc/admin/static/css/admin-global.css
+++ b/senguo.cc/admin/static/css/admin-global.css
@@ -168,7 +168,7 @@ img{border:none;}
 
 /*分页样式*/
 .list-pagination{margin-top:20px;margin-bottom:10px;}
-.list-pagination ul{float:right;margin-right:20px;}
+.list-pagination ul{float:right;}
 .list-pagination li{float:left;margin-left:5px;line-height:28px;}
 .list-pagination .page-btn{display:inline-block;width:26px;height:26px;border:1px solid #ccc;border-radius:1px;background:url("../images/container-icon.gif") no-repeat;}
 .list-pagination .pre-page{background-position:-34px -207px;}
@@ -400,9 +400,9 @@ input{color:#333;text-indent:5px;}
 .auth-box iframe{border:none;margin-top:20px;}
 
 .pop-win{position: fixed;width: 100%;height: 100%;background-color: rgba(0,0,0,.4);z-index: 1055;top: 0;left:0;display: none;}
-.picture-library{padding:20px;margin:10px 0;clear:both;}
-.picture-title{border-bottom:1px solid #ddd;height:50px;}
-.picture-title li{width:100px;text-align:center;float:left;color:#333;}
+.picture-library{padding: 15px 20px 0;margin:10px 0;clear:both;}
+.picture-title{border-bottom:1px solid #ddd;height:50px;line-height: 30px;font-size: 14px;}
+.picture-title li{width:115px;text-align:center;float:left;color:#333;}
 .picture-title li:hover{cursor:pointer;}
 .picture-title li.active{color:#44b549;}
 .picture-list{clear:both;width:105%;}
@@ -411,7 +411,7 @@ input{color:#333;text-indent:5px;}
 .picture-list li:hover{cursor:pointer;}
 .picture-list .img-selected{position: absolute;left: 0;top: 0;width:80px;height:80px;background-color: rgba(0,0,0,.5);color: #fff;text-align: center;line-height:80px;font-size: 12px;display: none;z-index:100;}
 .picture-list img{width:80px;height:80px;}
-.picture-title3{height:30px;line-height:30px;border-bottom:1px solid #ddd;padding-left:20px;}
+.picture-title3{height:30px;line-height:30px;border-bottom:1px solid #ddd;padding-left:20px;font-size: 14px;}
 .choosed-list{clear:both;width:105%;padding:20px;}
 .choosed-list li{float:left;margin:0 26px 15px 0;position:relative;}
 .choosed-list .active .img-selected{display:block;}
