--- a/senguo.cc/admin/static/m-admin/css/main.css
+++ b/senguo.cc/admin/static/m-admin/css/main.css
@@ -380,8 +380,8 @@
 .pop-win{position: fixed;width: 100%;height: 100%;background-color: rgba(0,0,0,.4);z-index: 1055;top: 0;left:0;}
 .pop-picture-library{width: 100%;height: 100%;position: fixed;background-color: rgba(0,0,0,.4);top: 0;left: 0;z-index:999;}
 .picture-library{padding:10px 15px;margin:10px 0;clear:both;height:200px;overflow-y:scroll;}
-.picture-title{border-bottom:1px solid #ddd;height:20px;}
-.picture-title li{width:100px;text-align:center;float:left;color:#333;}
+.picture-title{border-bottom:1px solid #ddd;height:20px;line-height: 20px;}
+.picture-title li{width:115px;text-align:center;float:left;color:#333;}
 .picture-title li.active{color:#48b6a4;}
 .picture-list{clear:both;width:105%;}
 .picture-list li{float:left;margin:0 10px 10px 0;position:relative;}
