super add get in shop

--- a/senguo.cc/admin/templates/superAdmin/shop-manage.html
+++ b/senguo.cc/admin/templates/superAdmin/shop-manage.html
@@ -78,7 +78,7 @@
                 </p>
             </div>
             <div class="col-lg-12 col-md-12" style="background-color:#F8F8F8">
-                <div class="col-lg-1 col-md-1" ></div>
+                <a href="javascript:;" class="pull-left getin-shop" data-url="{{data['shop_code']}}">进入店铺后台</a>
                 <div class="col-lg-5 col-md-5 ml-6">
                     <p>
                         <span class="tit2 old_msg">评价数：{{data["old_msg"]}}条</span>
@@ -142,7 +142,7 @@
             </p>
         </div>
         <div class="col-lg-12 col-md-12" style="background-color:#F8F8F8">
-            <div class="col-lg-1 col-md-1"></div>
+            <a href="javascript:;" class="pull-left getin-shop" data-url="{{data['shop_code']}}">进入店铺后台</a>
             <div class="col-lg-5 col-md-5 ml-6">
                 <p>
                     <span class="tit2 ">评价数：<span class="uold_msg"></span>条</span>
