--- a/senguo.cc/admin/templates/m-admin/goods-add.html
+++ b/senguo.cc/admin/templates/m-admin/goods-add.html
@@ -271,7 +271,7 @@
             <li class="show-default-list">系统默认图片</li>
         </ul>
         <div class="picture-title2" id="upload-area">
-            <span class="fl">点击图片即选中 (<span class="pic-classify">所有</span>)</span>
+            <span class="fl c999">点击图片即选中 (<span class="pic-classify">所有</span>)</span>
             <button id="upload-picture" class="btn fr">上传新图片</button>
         </div>
          <div class="picture-library">
