--- a/senguo.cc/admin/templates/official/appdownload.html
+++ b/senguo.cc/admin/templates/official/appdownload.html
@@ -10,9 +10,9 @@
             <h1>森果，免费的水果微商城</h1>
             <div class="download-method">
                 <ul>
-                    <li class="mall-one">多种商城模式，自由切换</li>
-                    <li class="mall-two">多种营销玩法，自由组合</li>
-                    <li class="mall-three">多种支付方式，自由选择</li>
+                    <li class="mall-one">●多种商城模式，自由切换</li>
+                    <li class="mall-two">●多种营销玩法，自由组合</li>
+                    <li class="mall-three">●多种支付方式，自由选择</li>
                 </ul>
             </div>
             <div class="appdownload-imgs">
