--- a/senguo.cc/admin/templates/official/base.html
+++ b/senguo.cc/admin/templates/official/base.html
@@ -50,7 +50,7 @@
 			<div class="senguo-nav font16">
 				<ul>
 					<li class="{{home_active}}"><a href="{{reverse_url('OfficialHome')}}" >首页</a></li>
-					<li class="{{product_active}}"><a href="{{reverse_url('OfficialProduct')}}">产品介绍</a></li>
+					<li class="{{product_active}} product-link"><a href="{{reverse_url('OfficialProduct')}}">产品介绍</a></li>
                     <li class="{{shop_active}}"><a href="{{reverse_url('OfficialShopList')}}">店铺列表</a></li>
 					<li class="{{about_active}}"><a href="{{reverse_url('OfficialAbout')}}">关于我们</a></li>
                     <li class="{{community_active}}"><a href="{{reverse_url('BbsMain')}}" target="_blank">森果社区</a></li>
