--- a/senguo.cc/admin/templates/official/home.html
+++ b/senguo.cc/admin/templates/official/home.html
@@ -181,19 +181,25 @@
             <p class="box-title">新手上路</p>
             <ul class="step-list group">
                 <li>
-                    <div class="roll-step">1</div>
+                    <div class="roll-step">
+                        <img src="{{static_url('official_img/circle_1.png')}}">
+                    </div>
                     <p class="first-title">提交店铺申请</p>
                     <p class="second-title">森果将在24小时内完成审核</p>
                 </li>
                 <li class="wp5"></li>
                 <li>
-                    <div class="roll-step">2</div>
+                    <div class="roll-step">
+                        <img src="{{static_url('official_img/circle_2.png')}}">
+                    </div>
                     <p class="first-title">设置店铺信息</p>
                     <p class="second-title">管理后台拥有强大便捷的设置功能</p>
                 </li>
                 <li class="wp5"></li>
                 <li>
-                    <div class="roll-step">3</div>
+                    <div class="roll-step">
+                        <img src="{{static_url('official_img/circle_3.png')}}">
+                    </div>
                     <p class="first-title">推广您的店铺</p>
                     <p class="second-title">多渠道多形式增加店铺粉丝数</p>
                 </li>
