--- a/senguo.cc/admin/static/css/official_base.css
+++ b/senguo.cc/admin/static/css/official_base.css
@@ -174,10 +174,10 @@ a,input,button{ outline:none; }
 .wrap-step{padding: 42px 0;}
 .step-list{padding-top: 58px;}
 .step-list>li{float: left;width: 30%;}
-.step-list .roll-step{width: 100px;height:100px;border-radius:50%;border:1px solid #fff;text-align: center;margin: 0 auto;color: #fff;font-size: 34px;padding-top: 38px;line-height: 16px;}
+.step-list .roll-step{width: 144px;height:144px;text-align: center;margin: 0 auto;}
 .step-list .first-title{font-size: 24px;font-weight: bold;text-align: center;color: #fff;margin-top: 30px;}
 .step-list .second-title{font-size: 16px;text-align: center;color: #fff;margin-top: 10px;}
-.step-list .wp5{width: 5%;height:98px;background: url("/static/images/for-right.png") center center no-repeat;}
+.step-list .wp5{width: 5%;height:98px;background: url("/static/images/for-right.png") center center no-repeat;margin-top: 22px;}
 .business-bg{width: 100%;background:-webkit-gradient(linear, 0 0, 100% 100%, from(#58d0a6), to(#65cec5));FILTER: progid:DXImageTransform.Microsoft.Gradient(gradientType=1,startColorStr=#58d0a6,endColorStr=#65cec5);}
 .yellow-bg{background-color: #e69519;}
 .blue-bg{background-color: #1c8ce4;}
