--- a/senguo.cc/admin/static/css/official_shop.css
+++ b/senguo.cc/admin/static/css/official_shop.css
@@ -9,7 +9,7 @@ body{background-color:#f5f5f7;}
 .list_box ul .item .img{width:100%;height:235px;overflow:hidden;padding:10px;}
 .list_box ul .item .img img{width:100%;}
 .list_box ul .item>a{text-decoration:none;}
-.picture-bg{width: 240px;height: 300px;position: absolute;top: 240px;background-color: #58d0a6;transition: all 0.35s;-moz-transition: all 0.35s;-webkit-transition: all 0.35s;-o-transition: all 0.35s;}
+.picture-bg{width: 240px;height: 300px;position: absolute;top: 240px;background-color: #32cd32;transition: all 0.35s;-moz-transition: all 0.35s;-webkit-transition: all 0.35s;-o-transition: all 0.35s;}
 .list_box ul .item .con{width: 100%;height: 60px;position: absolute;top:240px;opacity: 1;transition: all 0.35s;-moz-transition: top 0.35s;-webkit-transition: top 0.35s;-o-transition: top 0.35s;}
 .list_box ul .item:hover .picture-bg{top:0;width: 100%;height: 300px;opacity: 0.95;}
 .list_box ul .item:hover .con{top: 0;}
