--- a/senguo.cc/admin/templates/official/product.html
+++ b/senguo.cc/admin/templates/official/product.html
@@ -1,5 +1,8 @@
 {% extends 'base.html'%}
-{% block head-css%}<link href="{{static_url('css/official_product.css')}}" rel="stylesheet">{% end %}
+{% block head-css%}
+<link href="{{static_url('css/animate.min.css')}}" rel="stylesheet">
+<link href="{{static_url('css/official_product.css')}}" rel="stylesheet">
+{% end %}
 {% block content%}
 <div class="wrap-content">
     <div class="mall-bg">
@@ -40,6 +43,9 @@
                     <p class="data-content">库存、销量、用户、订单、营业额全部帮你细致分析</p>
                 </div>
                 <img src="{{static_url('official_img/data-line.png')}}" />
+                <span class="graph-up"></span>
+                <span class="graph-circle wow pulse" data-wow-delay="0.5s"></span>
+                <span class="graph-line"></span>
             </div>
          </div>
     </div>
@@ -53,13 +59,13 @@
             </div>
             <div class="wrap-paytype">
                 <div class="roll-box">
-                    <i class="wechat"></i>
-                    <i class="qq"></i>
-                    <i class="alipay"></i>
-                    <i class="sina"></i>
+                    <i class="wechat wow rollIn" data-wow-delay="0.1s"></i>
+                    <i class="qq wow bounceInUp" data-wow-delay="0.1s"></i>
+                    <i class="alipay wow bounceInDown" data-wow-delay="0.1s"></i>
+                    <i class="sina wow bounceInRight" data-wow-delay="0.1s"></i>
                 </div>
                 <div class="phone-bg">
-                    <img src="{{static_url('official_img/iPhone.png')}}" alt="森果登录页"/>
+                    <img src="{{static_url('official_img/iPhone_shadow.png')}}" alt="森果登录页"/>
                 </div>
             </div>
         </div>
@@ -69,15 +75,15 @@
             <div class="marketing-box">
                 <p class="marketing-title">多种营销和玩法</p>
                 <p class="marketing-content">告白墙、签到、代金券、团购、秒杀、大转盘应有尽有</p>
-                <img src="{{static_url('official_img/marketing-low-bg.png')}}" alt="森果登录页"/>
+                <img class="wow pulse" src="{{static_url('official_img/marketing-low-bg.png')}}" alt="森果登录页"/>
             </div>
             <div class="market-icons">
-                <i class="market-one"></i>
-                <i class="market-two"></i>
-                <i class="market-three"></i>
-                <i class="market-four"></i>
-                <i class="market-five"></i>
-                <i class="market-six"></i>
+                <i class="market-one wow bounceInUp" data-wow-delay="0.5s"></i>
+                <i class="market-two wow bounceInUp" data-wow-delay="0.6s"></i>
+                <i class="market-three wow bounceInUp" data-wow-delay="0.8s"></i>
+                <i class="market-four wow bounceInUp" data-wow-delay="0.4s"></i>
+                <i class="market-five wow bounceInUp" data-wow-delay="0.35s"></i>
+                <i class="market-six wow bounceInUp" data-wow-delay="0.9s"></i>
             </div>
         </div>
     </div>
@@ -122,5 +128,11 @@
 </div>
 {% end %}
 {% block bottom-js%}
+<script src="{{static_url('js/wow.min.js')}}"></script>
 <script src="{{static_url('js/official_product.js')}}"></script>
+<script>
+if (!(/msie [6|7|8|9]/i.test(navigator.userAgent))){
+    new WOW().init();
+};
+</script>
 {% end %}
