--- a/senguo.cc/admin/templates/official/base.html
+++ b/senguo.cc/admin/templates/official/base.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chorme=1">
-<meta name="keywords" content="森果,森果官网,武汉小果科技有限公司,senguo.cc,专业水果O2O第三方平台">
+<meta name="keywords" content="森果,森果官网,senguo.cc,专业水果O2O第三方平台">
 <meta name="description" content="森果为水果O2O、微信卖水果、水果零售提供免费的水果商城和水果后台管理系统。助力水果O2O，帮您把水果店搬到网上来。">
-<title>森果senguo.cc-专业水果O2O第三方平台-武汉小果科技有限公司</title>
+<title>森果senguo.cc-专业水果O2O第三方平台</title>
 <link href="{{static_url('css/official_base.css')}}" rel="stylesheet">
 <link rel="icon" href="{{static_url('images/favicon.ico')}}" type="image/x-icon">
 {% block head-css%}{% end %}
